--- a/notes_app/templates/base.html
+++ b/notes_app/templates/base.html
@@ -29,7 +29,7 @@
 {% endblock %}
 
 <footer>
-    <div>Python Web Basics Exam @SoftUni</div>
+    <div style="color:red;font-size: 22px">G.Lukanov Team!</div>
 </footer>
 </body>
 </html>
