--- a/petstagram/templates/photos/photo-add-page.html
+++ b/petstagram/templates/photos/photo-add-page.html
@@ -6,7 +6,7 @@
         <div class="edit-delete edit-photo">
             <h2>Add photo</h2>
             <!-- Start Add Photo Form -->
-            <form method="post" enctype="multipart/form-data">
+            <form class="add-photo-form" method="post" enctype="multipart/form-data">
 
                 {{ form }}
                 {% csrf_token %}
