--- a/petstagram/templates/pets/pet-add-page.html
+++ b/petstagram/templates/pets/pet-add-page.html
@@ -5,7 +5,7 @@
             <h2>Add pet</h2>
 
             <!-- Start Add Pet Form -->
-            <form method="post" action="{% url 'add pet' %}">
+            <form class="add-pet-form" method="post" action="{% url 'add pet' %}">
                 {{ form }}
                 {% csrf_token %}
                 <!-- Add Pet Button -->
