--- a/notes_app/templates/note/note-edit.html
+++ b/notes_app/templates/note/note-edit.html
@@ -5,7 +5,7 @@
         <h1>Edit Note</h1>
         <div class="form">
 
-            <form method="POST">
+            <form method="post">
 
                 {{ form }}
                 {% csrf_token %}
