--- a/petstagram/staticfiles/css/petFunctions.css
+++ b/petstagram/staticfiles/css/petFunctions.css
@@ -102,8 +102,8 @@
     box-shadow: none;
 }
 
-.add-photo-form, .add-pet-form {
-    display: flex;
-    flex-direction: column;
-    gap: 2px;
-}
+/*.add-photo-form, .add-pet-form {*/
+/*    display: flex;*/
+/*    flex-direction: column;*/
+/*    gap: 2px;*/
+/*}*/
