--- a/petstagram/templates/base.html
+++ b/petstagram/templates/base.html
@@ -4,7 +4,8 @@
 <head>
     <link rel="stylesheet"
           href="{% static 'css/styles.css' %}">
-    <link rel="icon" type="image/x-icon" href="{% static 'images/free-30-instagram-stories-icons23_122570.png' %}">
+    <link rel="icon" type="image/x-icon"
+          href="{% static 'images/dogo-argentino-dog-head-logo-icon-illustration-design-vector.jpg' %}">
     <title>Petstagram</title>
 </head>
 <body>
@@ -20,9 +21,11 @@
 
 
 <div class="footer">
-		<span style="color:red;font-size: 20px;font-weight: bold" class="footer-section">
-			© 2023 G.Lukanov!
-		</span>
+
+
+    <a style="padding: 16px;font-size: 26px;color: red;font-weight: bold;background-color: #79e792;display: block"
+       href="{% url 'out' %}" target="_blank"><span style="color: blue">~ G.Lukanov ~</span> Git-Profile -> Click Here!</a>
+
 </div>
 
 </body>
