--- a/petstagram/templates/partials/navbar.html
+++ b/petstagram/templates/partials/navbar.html
@@ -4,12 +4,12 @@
         <div class="container">
             <div class="logo">
                 <a href="{% url 'show index' %}">
-                    <img width="50px" src="{% static 'images/free-30-instagram-stories-icons23_122570.png' %}"
+                    <img width="50px" src="{% static 'images/dogo-argentino-dog-head-logo-icon-illustration-design-vector.jpg' %}"
                          alt="img1">
                 </a>
 
                 <a class="home" href="{% url 'show index' %}">
-                    <i>Petstagram</i>
+                    <i style="font-weight: bolder;font-size: 30px;color: #16a20c">PetStaGRaM</i>
                 </a>
             </div>
 
