--- a/petstagram/staticfiles/css/home.css
+++ b/petstagram/staticfiles/css/home.css
@@ -437,6 +437,9 @@ a {
 
 .footer {
     text-align: center;
+    margin-top: 50px;
+
+
 
 }
 
@@ -449,7 +452,4 @@ a {
 
 }
 
-.footer:hover{
-    padding-bottom: 20px;
-}
 
