--- a/petstagram/templates/accounts/login-page.html
+++ b/petstagram/templates/accounts/login-page.html
@@ -4,24 +4,20 @@
 
     <main>
 
-        <!-- Start Login Section-->
         <div class="login-register-div">
             <div class="login-register-box">
                 <h1>Petstagram</h1>
 
-                <form action="{% url 'login' %}">
+                <form action="{% url 'login' %}" method="post">
                     <input type="hidden" name="next" value="{{ next }}">
                     {{ form.username|placeholder:'Add name...' }}
-                    {{ form.password|placeholder:'Enter password...'  }}
+                    {{ form.password|placeholder:'Enter password...' }}
                     {% csrf_token %}
                     <button type="submit">Log in</button>
                 </form>
 
-
             </div>
             <div class="second-option">
-
-
                 <p>Don't have account? <a href="{% url 'register' %}">Register</a></p>
             </div>
         </div>
