created cvb for logout

--- a/petstagram/templates/base.html
+++ b/petstagram/templates/base.html
@@ -23,7 +23,7 @@
 <div class="footer">
 
     <a style="padding: 16px;font-size: 26px;color: red;font-weight: bold;background-color: #79e792;display: block"
-       href="{% url 'out' %}" target="_blank"><span style="color: blue">~ G.Lukanov ~</span> Git-Profile -> Click Here!</a>
+       href="{% url 'go to github' %}" target="_blank"><span style="color: blue">~ G.Lukanov ~</span> Git-Profile -> Click Here!</a>
 
 </div>
 
