--- a/petstagram/templates/accounts/profile-delete-page.html
+++ b/petstagram/templates/accounts/profile-delete-page.html
@@ -9,10 +9,12 @@
                 Are you sure you want to delete your profile?
             </h1>
             <div class="sure-buttons">
-                <!-- Yes (Delete Profile) Button -->
-                <button>Yes</button>
-                <!-- Go Back Button -->
-                <a class="edit-btn" href="javascript:history.back()">Go Back</a>
+                <form action="{% url 'profile delete' pk=object.pk %}" method="post">
+                    {% csrf_token %}
+                    <button>Yes</button>
+
+                    <a class="edit-btn" href="javascript:history.back()">Go Back</a>
+                </form>
             </div>
             <img src="{% static 'images/are_you_sure_cat.gif' %}" alt="are you sure cat git">
         </div>
