--- a/petstagram/templates/accounts/profile-details-page.html
+++ b/petstagram/templates/accounts/profile-details-page.html
@@ -2,58 +2,81 @@
 {% load static %}
 {% block content %}
 
-<main>
 
-    <div class="pet-profile">
-        <!-- Start Pet Personal Data Section -->
-        <div class="profile">
-            <div class="profile-data">
-                <div class="profile_img">
-                    <div class="image">
-                        <!-- Pet URL Image -->
-                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTgoIHq82qLYnvomfz5ZkW5CLQ8VNxCyI-hUw&usqp=CAU"
-                             alt="img8">
-                    </div>
-                </div>
-                <div class="personal">
-                    <div class="edit">
-                        <!-- Pet Name -->
-                        <p>Sasho</p>
-                        <!-- Pet Edit Button -->
-                        <a href="">
-                            <img class="edit-img" src="/static/images/edit-pen-icon-6.jpg" alt="edit button">
-                        </a>
-                        <!-- Pet Delete Button -->
-                        <a href="">
-                            <img class="bin-img" src="/static/images/icon-remove-22.jpg" alt="bin button">
-                        </a>
-                    </div>
-                    <div class="data">
-                        <!-- Pet Total Photos -->
-                        <span>4</span>
-                        <p>photos</p>
-                    </div>
+    <div class="profile">
+        <div class="profile-data">
+            <div class="profile_img">
+                <div class="image">
+                    <img src="{% static 'images/person.png' %}"
+                         alt="no profile picture">
                 </div>
             </div>
-        </div>
-        <!-- End Pet Personal Data Section -->
+            <div class="personal">
+                <div class="edit">
+                    <p>{{ object.username }}</p>
 
-        <div class="pet-posts">
+                    <!-- Show button for edit and delete if its OWNER -->
+                    {% if is_owner %}
 
-            <!-- IF Photos Start Pet Photos Post Section -->
+                        <a href="{% url 'profile edit' pk=object.pk %}">
+                            <img class="edit-img" src="{% static 'images/edit-pen-icon-6.jpg' %}"
+                                 alt="edit button">
+                        </a>
 
-            <!-- Start First Pet Photo Post -->
-            {% include 'common/pets-posts.html' %}
+                        <a href="{% url 'profile delete' pk=object.pk %}">
+                            <img class="bin-img" src="{% static 'images/icon-remove-22.jpg' %}"
+                                 alt="bin button">
+                        </a>
 
+                    {% endif %}
 
-            <!-- IF Photos End Pet Photos Post Section -->
+                </div>
 
-            <!-- IF NOT Photos Show No Post Image -->
-            <img class="no-posts" src="/static/images/no_posts.png" alt="no posts image">
+                <div class="data">
+                    <!-- Pet Total Photos -->
+                    <span>4</span>
+                    <p>photos</p>
 
+                    <span>7</span>
+                    <p>pets</p>
+
+                    <span>4232</span>
+                    <p>likes</p>
+                </div>
+
+                {% if object.get_full_name %}
+                    <h3 class="names">{{ object.get_full_name }}</h3>
+                {% else %}
+                    <h3 class="names">{{ object.username }}</h3>
+                {% endif %}
+
+                <p class="email">{{ object.email }}</p>
+
+            {% if object.gender %}
+                {{ object.gender }}
+            {% endif %}
+
+            </div>
         </div>
     </div>
-</main>
+    <!-- End Pet Personal Data Section -->
+
+    <div class="pet-posts">
+
+        <!-- IF Photos Start Pet Photos Post Section -->
+
+        <!-- Start First Pet Photo Post -->
+        {% include 'common/pets-posts.html' %}
+
+
+        <!-- IF Photos End Pet Photos Post Section -->
+
+        <!-- IF NOT Photos Show No Post Image -->
+        <img class="no-posts" src="{% static 'images/no_posts.png' %}" alt="no posts image">
+
+    </div>
+
+
 
 
 {% endblock %}
