--- a/petstagram/templates/pets/pet-edit-page.html
+++ b/petstagram/templates/pets/pet-edit-page.html
@@ -2,22 +2,17 @@
 {% block content %}
 
     <main>
-        <!-- Start Edit Pet Section -->
         <div class="edit-delete edit-photo">
             <h2>Edit Pet</h2>
-            <!-- Start Edit Pet From -->
-            <form method="post">
+            <form method="post" action="{% url 'edit pet' pet_slug=pet_slug %}">
                 <p>
                     {{ form.as_p }}
                     {% csrf_token %}
                 </p>
-                <!-- Edit Pet Button -->
                 <button class="edit-btn" type="submit">Edit</button>
             </form>
-            <!-- End Edit Pet Form -->
 
         </div>
-        <!-- End Edit Pet Section -->
 
     </main>
 
