--- a/petstagram/templates/photos/photo-edit-page.html
+++ b/petstagram/templates/photos/photo-edit-page.html
@@ -9,7 +9,7 @@
 
             <!-- Starts Edit Photo Form -->
             <form method="post">
-                {{ form }}
+                {{ form.as_p}}
                 {% csrf_token %}
 
                 <!-- Edit Photo Button -->
