--- a/petstagram/templates/pets/pet-details-page.html
+++ b/petstagram/templates/pets/pet-details-page.html
@@ -62,7 +62,7 @@
                 <div class="personal">
                     <div class="edit">
                         <p>{{ pet.name }}</p>
-{#                        {% if is_owner %}#}
+                        {% if is_owner %}
                             <a href="{% url 'edit pet' username=username pet_slug=pet.slug %}">
                                 <img class="edit-img" src="{% static 'images/edit-pen-icon-6.jpg' %}" alt="edit button">
                             </a>
@@ -70,7 +70,7 @@
                             <a href="{% url 'delete pet' username=username pet_slug=pet.slug %}">
                                 <img class="bin-img" src="{% static 'images/icon-remove-22.jpg' %}" alt="bin button">
                             </a>
-{#                        {% endif %}#}
+                        {% endif %}
                     </div>
                     <div class="data">
                         <span>{{ photos_count }}</span>
