--- a/petstagram/templates/base.html
+++ b/petstagram/templates/base.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet"
           href="{% static 'css/styles.css' %}">
     <link rel="icon" type="image/x-icon"
-          href="{% static 'images/dogo-argentino-dog-head-logo-icon-illustration-design-vector.jpg' %}">
+          href="{% static 'images/free-30-instagram-stories-icons23_122570.png' %}">
     <title>Petstagram</title>
 </head>
 <body>
