--- a/petstagram/staticfiles/css/home.css
+++ b/petstagram/staticfiles/css/home.css
@@ -36,6 +36,7 @@ body {
     width: 100%;
     border: 1px solid rgb(218, 217, 217);
     box-shadow: 4px 4px 20px 1px #cff3cf;
+    text-shadow: 1px 1px 1px black;
 
 }
 
@@ -50,6 +51,7 @@ body {
 
 .container a {
     color: #403e3e;
+
 }
 
 .errorlist li {
@@ -64,24 +66,25 @@ body {
 }
 
 .searchbar {
-    width: -10%;
     margin: 0 18% 5% 0;
     text-align: end;
 }
 
 .searchbar label {
     display: none;
+
 }
 
 .searchbar input {
-    background-color: #fafafa;
+    background-color: #c4f3c0;
     width: 80%;
-    padding: 5px 5px 5px 0;
+    padding: 14px 12px 14px 0;
     text-indent: 21px;
     outline: none;
-    border: 1px solid rgb(218, 217, 217);
-    border-radius: 2px;
-    color: rgb(77, 77, 77);
+    border-radius: 8px;
+    border: 1px solid rgb(190, 186, 186);
+    color: green;
+    font-size: 26px;
 }
 
 .searchbar button {
@@ -95,13 +98,15 @@ body {
 
 .searchbar img {
     position: absolute;
-    margin-left: -2.5rem;
-    margin-top: -0.8rem;
+    margin-left: -3.5rem;
+    margin-top: -1.70rem;
+    width: 38px;
+    height: 35px;
 }
 
 .searchbar input::placeholder {
     font-weight: lighter;
-    color: rgb(172, 172, 172);
+    color: rgb(101, 99, 99);
 }
 
 .home {
@@ -110,7 +115,9 @@ body {
     color: black;
     font-family: 'Indie Flower', cursive;
 }
-
+.home i:hover{
+    text-shadow: 2px 2px 1px black;
+}
 .nav-links {
     font-weight: lighter;
     color: rgb(172, 172, 172);
@@ -176,7 +183,7 @@ main .container {
 
 .col-9 {
     width: 65%;
-    margin: 5% auto;
+    margin: 10% auto;
     margin-bottom: -20px;
 }
 
@@ -261,11 +268,11 @@ main .container {
 }
 
 .col-9 .card .top .userDetails h3 span {
-    font-size: 0.75em;
+    font-size: 0.85em;
 }
 
 .col-9 .card .top .userDetails h3 span {
-    font-size: 0.75em;
+    font-size: 0.85em;
 }
 
 .dot {
@@ -438,12 +445,13 @@ a {
         margin: 10px 0 15px;
     }
 
+
 }
 
 .footer {
     text-align: center;
     margin-top: 50px;
-
+    opacity: 0.9;
 }
 
 .footer .footer-section {
@@ -459,4 +467,8 @@ a {
     zoom: 1.1;
     transition: 400ms;
 
+}
+
+.cat-wrapper {
+    padding-bottom: 300px;
 }
