--- a/petstagram/templates/accounts/login-page.html
+++ b/petstagram/templates/accounts/login-page.html
@@ -13,7 +13,7 @@
                     {{ form.username|placeholder:'Add name...' }}
                     {{ form.password|placeholder:'Enter password...' }}
                     {% csrf_token %}
-                    <button id='toast-click' type="submit" onclick="myFunction()">Log in</button>
+                    <button type="submit">Log in</button>
                 </form>
 
             </div>
